# Programacion-en-Cpp

./: .clang-format  Cuarto Proyecto.cpp  DecimoPrimerProyecto.cpp  NovenoProyecto.cpp  Primer proyecto.cpp  SextoProyecto.cpp  TercerProyecto.cpp
Albergue_Perros/: albergue_perros.c  main.cpp  meson.build  widgets_label.cpp  widgets_label.h
Albergue_Perros/.cache/clangd/index/: AddPerreraDialog.cpp.8E73AC8578A9E3DD.idx  AddPerreraDialog.h.CF196EC996A7E39D.idx  AgregarPerrera.cpp.02C9CFA77D395C25.idx  AgregarPerrera.h.2FEDE675EE36430D.idx  Buscar.cpp.E91863C7F9475892.idx  Buscar.cpp.F58ADE2A0E907A11.idx  Clases.cpp.3E1F6E89DB22BCDA.idx  Clases.cpp.97D73C3C0FAC9383.idx  Clases.h.467E3D9BD45188F0.idx  Clases.h.6F0023ADC2EA04DD.idx  Eliminar.cpp.20765C8F4F1CC393.idx  Eliminar.cpp.6AFBF5B9A7A53428.idx  Funciones_Main.cpp.3E51713AA596E491.idx  Funciones_Main.h.AFDB642517C71626.idx  Insertar.cpp.42A6F9572BFEC671.idx  Insertar.cpp.DADBAF3B6B07586F.idx  MainWindow.cpp.E6ABA4867B9E799A.idx  MainWindow.h.3F93AAAB9A63140C.idx  Modificar.cpp.824E15A45BC9AEEE.idx  Modificar.cpp.E6E57378542F9C47.idx  Mostrar.cpp.3DE5951C583173B7.idx  Mostrar.cpp.AED1F23913487738.idx  MostrarPerrera.cpp.963EB064A4EB5029.idx  MostrarPerrera.h.85AC406E7DC1A534.idx  MostrarPerritos.cpp.ED1FC175B5F926FB.idx  MostrarPerritos.h.AC7038974EEB3519.idx  Mover.cpp.516DD8098C3889F5.idx  Mover.cpp.5D881FAE61382C47.idx  albergue_perros.c.1DF370E9753557A4.idx  buttons.cpp.C351729EEC3B6B72.idx  buttons.h.0DE81E7A2844DE68.idx  examplewindow.cpp.99DD2D85E54525CB.idx  examplewindow.h.4E75AAA827712E5F.idx  examplewindows.cpp.4EF25E5A5C2C0E45.idx  examplewindows.h.B2144DC492D89670.idx  helloworld.cpp.8C29E2A49B653205.idx  helloworld.h.E54986DA96BF5F1B.idx  main.cpp.0CCCA1599D8125D6.idx  main.cpp.2976490C80A67507.idx  main.cpp.81A4F28B0C4941A3.idx  (+4 more)
Albergue_Perros/gui/: AddPerreraDialog.cpp  AddPerreraDialog.h  AgregarPerrera.cpp  AgregarPerrera.h  MainWindow.cpp  MainWindow.h  MostrarPerrera.cpp  MostrarPerrera.h  MostrarPerritos.cpp  MostrarPerritos.h
Albergue_Perros/practicas/: buttons.cpp  buttons.h  examplewindows.cpp  examplewindows.h  first_window.cpp  first_window.h  radiobuttons.h
Albergue_Perros/src/: Buscar.cpp  Clases.cpp  Clases.h  Eliminar.cpp  Funciones_Main.cpp  Funciones_Main.h  Insertar.cpp  Modificar.cpp  Mostrar.cpp  Mover.cpp  main.cpp
Practicas/: DecimoProyecto.cpp  DecimoSegundoProyecto.cpp  OctavoProyecto.cpp  QuintoProyecto.cpp  SegundoProyecto.cpp  SeptimoProyecto.cpp
